--- a/manifest.json
+++ b/manifest.json
@@ -3,18 +3,25 @@
 
   "name": "ClojureScript REPL (Self Hosting)",
   "description": "Self Hosting ClojureScript REPL for Chrome DevTools",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "author": "Matthew Molloy",
 
   "devtools_page": "devtools.html",
 
   "permissions": [
+    "*://*/*",
+    "*://*/",
+    "tabs"
   ],
 
   "icons": { "16": "icon16.png",
             "48": "icon48.png",
             "128": "icon128.png" },
 
-  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
+
+  "web_accessible_resources": [
+    "/out/self_compile.js"
+  ]
 
 }
