requiring now working

--- a/manifest.json
+++ b/manifest.json
@@ -9,17 +9,19 @@
   "devtools_page": "devtools.html",
 
   "permissions": [
-    "tabs"
+    "tabs",
+    "*://*/*"
   ],
 
   "icons": { "16": "icon16.png",
             "48": "icon48.png",
             "128": "icon128.png" },
 
-  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
+  "content_security_policy": "script-src 'self' http://localhost:* 'unsafe-eval'; object-src 'self'",
 
   "web_accessible_resources": [
-    "/out/self_compile.js"
+    "/out/self_compile.js",
+    "/jquery-2.1.1.min.js"
   ]
 
 }
